<resources>
    <string name="app_name"></string>
    <string name="all_programs">All Programs</string>
    <string name="most_watched">Most Viewed</string>
    <string name="recently_added">recently added</string>
    <string name="title_activity_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_First_Name">Enter your first name</string>
    <string name="First_Name">First Name</string>
    <string name="hint_enter_last_name">Enter your last name</string>
    <string name="radio_live_login_btn">Live Radio</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="label_next">Next</string>
    <string name="label_previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_radio">ActivityRadio</string>
    <string name="likes_item">Likes</string>
    <string name="comments_item">Comments</string>
    <string name="views_item">Views</string>
    <string name="hint_email_address">Enter your Email Address</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Login</string>
    <string name="not_a_member_sign_up">Not a member - Sign up</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="registration">Registration</string>
    <string name="enter_your_birthday">Enter Your Birthday</string>
    <string name="reenter_your_password">ReEnter Your Password</string>
    <string name="sign_up">Sign Up</string>

    <!--//Facebook-->
    <string name="facebook_app_id" translatable="false">2326621704290575</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2326621704290575</string>
    <string name="logOutDialog">Are you sure you want to log out?</string>
    <string name="logOutSuccess">Logged out successfully!</string>
    <string name="Ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main_screen">Main Screen</string>
    <string name="title_menu_log_out">Log Out</string>
    <string name="radio_item_duration" translatable="false">duration</string>
    <string name="title_radio_item" translatable="false">title</string>
    <string name="togglebutton_play_radio_item" translatable="false">ToggleButton</string>
    <string name="play_radio_item" translatable="false">PLAY</string>
    <string name="stop_radio_item" translatable="false">STOP</string>
    <string name="creation_date_radio_item" translatable="false">creationDate</string>
    <string name="enter_your_comment">Enter your comment...</string>
    <string name="submit">submit</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="last_shows_that_add">Last shows that add</string>
    <string name="my_lists">My Lists</string>
    <string name="title_notification">title notification</string>
    <string name="time_date">time/date</string>


</resources>
