<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp">

        <ToggleButton
            android:id="@+id/tbPlayStop"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_radius_border_radio_item"
            android:checked="false"
            android:text="@string/togglebutton_play_radio_item"
            android:textColor="#BFFFFFFF"
            android:textOff="@string/play_radio_item"
            android:textOn="@string/stop_radio_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_radio_item"
            app:layout_constraintEnd_toStartOf="@+id/addFavoriteBtn"
            app:layout_constraintStart_toEndOf="@+id/tbPlayStop"
            app:layout_constraintTop_toTopOf="@+id/tbPlayStop" />

        <TextView
            android:id="@+id/durationTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/radio_item_duration"
            app:layout_constraintEnd_toEndOf="@+id/titleTv"
            app:layout_constraintStart_toStartOf="@+id/titleTv"
            app:layout_constraintTop_toBottomOf="@+id/titleTv" />

        <TextView
            android:id="@+id/addedTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/creation_date_radio_item"
            app:layout_constraintStart_toStartOf="@+id/durationTv"
            app:layout_constraintTop_toBottomOf="@+id/durationTv" />

        <TextView
            android:id="@+id/likesTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/likes_item"
            app:layout_constraintBottom_toBottomOf="@+id/addLike"
            app:layout_constraintStart_toEndOf="@+id/addLike"
            app:layout_constraintTop_toTopOf="@+id/addLike" />

        <TextView
            android:id="@+id/commentsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/comments_item"
            app:layout_constraintBottom_toBottomOf="@+id/commentBtn"
            app:layout_constraintStart_toEndOf="@+id/commentBtn"
            app:layout_constraintTop_toTopOf="@+id/commentBtn" />

        <TextView
            android:id="@+id/viewsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/views_item"
            app:layout_constraintBottom_toBottomOf="@+id/viewsIv"
            app:layout_constraintStart_toEndOf="@+id/viewsIv"
            app:layout_constraintTop_toTopOf="@+id/viewsIv" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFavoriteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@android:color/white"
            app:fabCustomSize="30dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleTv"
            app:srcCompat="@drawable/icons8_add_to_favorites_32" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/shareFbBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@android:color/white"
            app:fabCustomSize="30dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="@+id/addFavoriteBtn"
            app:layout_constraintTop_toBottomOf="@+id/addFavoriteBtn"
            app:srcCompat="@drawable/icons8_share_32" />

        <ImageButton
            android:id="@+id/viewsIv"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@android:color/white"
            android:contentDescription="@string/submit"
            app:layout_constraintBottom_toBottomOf="@+id/commentBtn"
            app:layout_constraintStart_toEndOf="@+id/commentsTv"
            app:layout_constraintTop_toTopOf="@+id/commentBtn"
            app:srcCompat="@drawable/icons8_eye_32" />

        <ImageButton
            android:id="@+id/commentBtn"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@android:color/white"
            android:contentDescription="@string/comments_item"
            app:layout_constraintBottom_toBottomOf="@+id/addLike"
            app:layout_constraintStart_toEndOf="@+id/likesTv"
            app:layout_constraintTop_toTopOf="@+id/addLike"
            app:srcCompat="@drawable/icons8_comments_32" />

        <ImageButton
            android:id="@+id/addLike"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:contentDescription="@string/likes_item"
            app:layout_constraintStart_toEndOf="@+id/tbPlayStop"
            app:layout_constraintTop_toBottomOf="@+id/addedTv"
            app:srcCompat="@drawable/icons8_like_32" />

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="Enter your comment..."
            android:ems="10"
            android:hint="@string/enter_your_comment"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/sendButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/commentsTv"
            tools:ignore="UnusedAttribute"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:background="@drawable/shape_radius_border_white"
            app:layout_constraintBottom_toBottomOf="@+id/commentEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/commentEditText"
            app:srcCompat="@drawable/sent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>